# Dio_Bank

./: .gitignore  conftest.py  pyproject.toml
instance/: blog.sqlite
migrations/versions/: 1bbcfa243a3e_initial_migration.py  727de553257a_added_role_table.py  f2011f3f99a5_added_password_field.py  f5a94d26be43_add_active_attr_in_user.py
src/: app.py  config.py  db.py  utils.py
src/controllers/: auth.py  post.py  role.py  user.py
src/models/: __init__.py  base.py  post.py  role.py  user.py
src/tests/: test_app.py  test_post.py  test_role.py  test_utils.py
src/tests/integration/controllers/: test_app.py  test_auth.py  test_db.py  test_post.py  test_role.py  test_user.py
