[tool.poetry]
name = "dio - banco"
version = "0.1.0"
description = ""
authors = ["Alisson Noli"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "*"
flask-sqlalchemy = "*"
python-dotenv = "^1.0.1"
flask-migrate = "*"
flask-jwt-extended = "^4.7.1"
pytest = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
